# scivol

./: .gitignore  AGENTS.md  LICENSE  MANIFEST.in  MODELS.md  Makefile  README.md  TODO.md  analysis.py  arma_garch_estimator.py  benchmark_optimizers.py  boom.py  build.sh  details.md  devtest.py  garch_analysis.py  garch_estimator.py  garch_lib2.py  next_steps.md  prerelease.md  pyproject copy.toml  pyproject.toml  readme_backup.md  setup.py  symbolic_derivatives.py  symbols.ipynb  test.py  test_derivatives.py  test_garch_solvers.py  test_logspace_t.py  test_volkit_vs_python.py  utilities.py  volkit_compat.py
.github/workflows/: wheels.yml
alpha/: example_usage.py  garch_lib.py
backup/: analysis.py  likelihoods.py  numerical_hessians.py  utilities.py
benchmark_results/: benchmark_results.csv  benchmark_summary.csv  recommended_defaults.json
core/: DEPRECATED_objective_general.c  DEPRECATED_objective_special.c  compute_variance.c  cvm_lib.c  volkit_core.h
data/: DATA_HW1.csv  info.csv  spx_chf_data.csv
dev/: garch_pq.py  lags.py
python/: volkit_module.c
results/: q2_1a.csv  q2_1b.csv  q2_1c.csv  q2_1d_acf.csv  q2_1d_lb.csv  q2_2.csv  q3_1a.csv  q3_1b.csv  q3_1c.csv  q3_1d.csv  q3_1d_garch.csv  q3_2.csv  q3_2c.csv  q3_3.csv  q3_3b.csv  q3_4.csv  q3_4b.csv  q3_4c.csv  q3_summary.csv  volatility_cbond_normal.csv  volatility_cbond_skewt.csv  volatility_cbond_studentt.csv  volatility_stock_normal.csv  volatility_stock_skewt.csv  volatility_stock_studentt.csv  volkit_parity.csv
scivol/: __init__.py  _autoselect.py  _core.c  _core.pyi  _dcc_kernels.py  _evaluation.py  _mixins.py  _parallel.py  _progress.py  _qmle.py  _settings.py  _validation.py  _version.py  dcc.py  result.py  roles.py
scivol/_csrc/: arma.c  arma_egarch.c  arma_garch.c  arma_gjr_garch.c  dcc_gaussian.c  errors_garch.c  errors_gjr_garch.c  likelihood_egarch.c  likelihood_garch.c  likelihood_ged.c  likelihood_gjr_garch.c  likelihood_normal.c  likelihood_skewt.c  likelihood_studentt.c  log_wrappers.c  math_and_helpers.h  mean_egarch.c  mean_garch.c  mean_gjr_garch.c  mean_x.c  scivol_core.h  transforms_logspace.c  variance_garch.c  variance_gjr_garch.c
scivol/_devtools/: __init__.py  ad_oracle.py  derivcheck.py  diagnostic.py
scivol/_kernels/: __init__.py  arma_egarch_ged.py  arma_egarch_normal.py  arma_egarch_skewt.py  arma_egarch_studentt.py  arma_garch_ged.py  arma_garch_normal.py  arma_garch_skewt.py  arma_garch_studentt.py  arma_ged.py  arma_gjr_garch_ged.py  arma_gjr_garch_normal.py  arma_gjr_garch_skewt.py  arma_gjr_garch_studentt.py  arma_normal.py  egarch_ged.py  egarch_normal.py  egarch_skewt.py  egarch_studentt.py  garch_ged.py  garch_normal.py  garch_skewt.py  garch_studentt.py  generic.py  gjr_garch_ged.py  gjr_garch_normal.py  gjr_garch_skewt.py  gjr_garch_studentt.py  linear_mean_egarch_common.py  linear_mean_garch_common.py  linear_mean_gjr_garch_common.py  linear_mean_normal_common.py  meanx_egarch.py  meanx_garch_normal.py  meanx_gjr_garch.py  meanx_normal.py  meanx_standalone.py  module_schema.py  routine.py  transforms.py
scivol/components/: __init__.py  base.py  density.py  mean.py  vol.py
scivol/estimators/: __init__.py
scivol/spec/: __init__.py  composite.py
src/: base.py
src/volkit/: __init__.py  _core.pyi  components.py  estimators.py  garch_lib2.py  kernel_registry.py  result.py  structure.py
src/volkit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/volkit/_kernels/: fallback.py
test/: likelihood_surface.py  speed.py  time_speed.py
tests/: conftest.py  test_ad_oracle_models.py  test_arma_egarch_linked.py  test_autovol.py  test_c_vs_python.py  test_component_view.py  test_criterion.py  test_dcc.py  test_dgp_estimation.py  test_egarch_forecast.py  test_error_handling.py  test_fit_mixins.py  test_gradients_arma_ged.py  test_gradients_egarch.py  test_gradients_garch_ged.py  test_gradients_gjr_garch.py  test_gradients_gjr_garch_ged.py  test_gradients_meanx_egarch.py  test_gradients_meanx_garch_normal.py  test_gradients_meanx_gjr_garch.py  test_gradients_meanx_normal.py  test_meanx_standalone.py  test_mle_core.py  test_multi_series.py  test_pandas_integration.py  test_parallel_auto.py  test_parity.py  test_phase1_foundation.py  test_phase2_practical_extensions.py  test_public_surface_gates.py  test_qmle_validation.py  test_result_core.py  test_settings.py  test_spec_core.py
utils/: bindingManager.py  stats.py  tools.py
volkit/: __init__.py  _autoselect.py  _core.c  _core.pyi  _dcc_kernels.py  _mixins.py  _parallel.py  _progress.py  _qmle.py  _settings.py  _validation.py  dcc.py  garch_lib2.py  result.py
volkit.egg-info/: SOURCES.txt
volkit/_csrc/: arma.c  arma_garch.c  dcc_gaussian.c  errors_garch.c  errors_gjr_garch.c  garch_asympt.c  likelihood_garch.c  likelihood_gjr_garch.c  likelihood_normal.c  likelihood_skewt.c  likelihood_studentt.c  log_wrappers.c  math_and_helpers.h  transforms_logspace.c  variance_garch.c  variance_gjr_garch.c  volkit_core.c  volkit_core.h
volkit/_devtools/: __init__.py  ad_oracle.py  derivcheck.py  diagnostic.py
volkit/_kernels/: __init__.py  arma_garch_normal.py  arma_garch_normal_zz.py  arma_garch_skewt.py  arma_garch_studentt.py  arma_normal.py  fallback.py  garch11_normal.py  garch_normal.py  garch_skewt.py  garch_studentt.py  gjr_garch_normal.py  gjr_garch_skewt.py  gjr_garch_studentt.py  module_schema.py  routine.py  transforms.py
volkit/components/: __init__.py  base.py  density.py  mean.py  vol.py
volkit/estimators/: __init__.py  base.py  estimators.py  mle.py  qmle.py
volkit/spec/: __init__.py  composite.py
