[build-system]
requires = ["setuptools>=69", "wheel", "numpy>=1.22"]
build-backend = "setuptools.build_meta"

[project]
name            = "volkit"
version         = "0.1.0"
description     = "GARCH helpers in C"
requires-python = ">=3.9"
dependencies    = [
    "numpy>=1.22",
    "scipy>=1.7",
    "joblib>=1.2",
]

[tool.setuptools]
packages = [
  "volkit",
  "volkit.components",
  "volkit.spec",
  "volkit.estimators",
  "volkit._kernels",
]

[[tool.setuptools.ext-modules]]
name = "volkit._core"
sources = [
  "volkit/_core.c",
  "volkit/_csrc/variance_garch.c",
  "volkit/_csrc/likelihood_garch.c",
  "volkit/_csrc/likelihood_normal.c",
  "volkit/_csrc/likelihood_studentt.c",
  "volkit/_csrc/likelihood_skewt.c",
  "volkit/_csrc/errors_garch.c",
  "volkit/_csrc/transforms_logspace.c",
  "volkit/_csrc/arma_garch.c",
  "volkit/_csrc/arma.c",
  "volkit/_csrc/variance_gjr_garch.c",
  "volkit/_csrc/likelihood_gjr_garch.c",
  "volkit/_csrc/errors_gjr_garch.c",
]
include-dirs       = ["volkit/_csrc"]
extra-compile-args = ["-O3", "-ffast-math", "-march=native", "-ffp-contract=fast", "-funroll-loops"]