[build-system]
requires = ["setuptools>=69", "wheel", "numpy>=1.22"]
build-backend = "setuptools.build_meta"

[project]
name            = "scivol"
dynamic         = ["version"]
description     = "Volatility modeling in Python with fast GARCH-family C extensions."
readme          = "README.md"
license         = { file = "LICENSE" }
authors         = [{ name = "Ivan Khalin" }]
requires-python = ">=3.9"
dependencies    = [
    "numpy>=1.22",
    "scipy>=1.7",
    "joblib>=1.2",
]
keywords = ["volatility", "garch", "gjr-garch", "econometrics", "time-series", "finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial",
]

[project.urls]
Homepage = "https://github.com/vengveng/scivol"
Repository = "https://github.com/vengveng/scivol"
Issues = "https://github.com/vengveng/scivol/issues"

[project.optional-dependencies]
progress = ["tqdm>=4.0"]
dev = ["jax", "tqdm>=4.0"]

[tool.setuptools]
packages = [
  "scivol",
  "scivol.components",
  "scivol.spec",
  "scivol.estimators",
  "scivol._kernels",
]

[tool.setuptools.package-data]
scivol = ["_core.pyi", "py.typed"]

[tool.setuptools.dynamic]
version = { attr = "scivol._version.__version__" }

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-*"
skip = "*-win32 *-manylinux_i686 *-musllinux_i686"
test-command = 'python -c "import numpy as np; import scivol; import scivol._core; from scivol import GARCH, GJRGARCH, Normal, StudentT; data = np.random.default_rng(0).standard_normal(500).astype(np.float64) * 0.01; r1 = (GARCH(1, 1) + Normal()).fit(data, solver=\"slsqp\", verbose=False, n_jobs=1); assert r1.converged; r2 = (GJRGARCH(1, 1) + StudentT()).fit(data, solver=\"slsqp\", log_mode=True, verbose=False, n_jobs=1); assert r2.params is not None; assert np.all(np.isfinite(r2.params))"'